assets/css/style.css
/* base */
@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Work+Sans:wght@100;300;400;800;900&display=swap');

html {
  font-size: 65.5%;
  overflow-x: hidden;
}

* {
  margin: 0;
  padding: 0;
  border: none;
}

a {
  text-decoration: none;
  text-transform: uppercase;
}

body {
  background-color: #141414;
}

header {
  padding: 3rem;
}

h1 {
  font-family: 'Press Start 2P', 'sans-serif';
  font-size: 2rem;
  font-size: clamp(2rem, 1.4444444444444444rem + 2.7777777777777777vw, 5rem);
  text-align: center;
  color: #fff;
}

h2 {
  font-family: 'Press Start 2P', 'sans-serif';
  font-size: 1.6rem;
  font-size: clamp(1.6rem, 1.5259259259259261rem + 0.37037037037037024vw, 2rem);
  color: #1f1f1f;
}

h3 {
  font-family: 'Work Sans', 'sans-serif';
  font-weight: 600;
  font-size: 1.4rem;
  color: #1f1f1f;
  text-transform: uppercase;
}

p {
  font-family: 'Work Sans', 'sans-serif';
  font-weight: 400;
  color: #2e2e2e;
  line-height: 1.4em;
  font-size: 1.6rem;
  font-size: clamp(1.6rem, 1.5259259259259261rem + 0.37037037037037024vw, 2rem);
}


.overlay-text {
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 100;
  display: none;
  position: fixed;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  color: rgb(238, 2, 2);
  font-family: 'Press Start 2P', 'sans-serif';
  transition: background-color 500ms, font-size 500ms;
}

.overlay-text-small {
  font-size: .3em;
}

.overlay-text.visible {
  display: flex;
  animation: overlay-grow 500ms forwards;
}

@keyframes overlay-grow {
  from {
    background-color: rgba(0, 0, 0, 0);
    font-size: 0;
  }

  to {
    background-color: rgba(0, 0, 0, .8);
    font-size: 10em;
  }
}

/* Game area styling */
.game-wrapper {
  position: relative;
  background-color: #141414;
  align-items: center;
  width: 100vw;
  height: 89vh;
  background: url('../images/king-dice-large.webp') no-repeat center center;
  background-size: cover;
}

.card-game-area {
  top: 36vh;
  position: relative;
  z-index: 1;
  width: 850px;
  height: auto;
  margin-left: auto;
  margin-right: auto;
  padding: 0 2rem 2rem 2rem;
  background: #fff;
  border-radius: 10px;
  border: solid #000 5px;
}

/* Cards area styling */
.computer-area {
  margin-top: 2rem;
  margin-bottom: 2rem;
}

.computer-area h3 {
  margin-top: 1rem;
}

#computer-cards {
  display: flex;
  justify-content: center;
  height: 130px;
}

.card-game-area #message {
  font-family: 'Press Start 2P', 'sans-serif';
  font-size: 2.5rem;
  color: rgb(238, 2, 2);
}

.message-area {
  width: 100%;
  padding-top: 1rem;
  text-align: center;
  height: 30px;
}

#player-cards {
  display: flex;
  justify-content: center;
  height: 130px;
}

.player-area h3 {
  margin-top: 1rem;
}

/* Game buttons styling */
.game-buttons {
  position: absolute;
  right: 10px;
  bottom: -15%;
  z-index: 10;
  width: 100%;
  display: flex;
  justify-content: space-between;
}

.right-box {
  display: flex;
}

.right-box button {
  margin-left: 16px;
}

.left-box button {
  margin-left: 16px;
}

button {
  font-family: "Work Sans", "sans-serif";
  font-weight: 800;
  text-transform: uppercase;
  color: #2e2e2e;
  line-height: 1.4em;
  font-size: 1.4rem;
  font-size: clamp(1.4rem, 1.362962962962963rem + 0.18518518518518534vw, 1.6rem);
  padding: 1rem 2rem;
  border-radius: 10px;
  outline: none;
  border: none;
  transition: all 0.2s ease 0s;
  box-shadow: inset 0px 0px 5px 2px rgba(0, 0, 0, 0.75);
}

button:hover {
  cursor: pointer;
  color: rgb(238, 2, 2);
}

button:active {
  color: rgb(238, 2, 2);
  box-shadow: inset 0px 0px 14px 5px rgba(0, 0, 0, 0.75);
}

.admin-buttons {
  margin: 1em;
  background-color: #00ffff;
}

/* New Game warning */
.swal2-shown .swal2-height-auto {
  height: 100vh !important;
}

.swal2-icon.swal2-warning {
  border-color: rgb(238, 2, 2) !important;
  color: rgb(238, 2, 2) !important;
}

.swal2-title {
  color: #000 !important;
}

.swal2-html-container {
  font-size: 1.4rem !important;
  text-align: left !important;
  font-family: "Work Sans", "sans-serif";
  font-weight: 600 !important;
  line-height: 1.4em !important;
}

.swal2-styled {
  font-weight: 500 !important;
}

/* Instructions area */
.swal2-styled.swal2-confirm {
  background-color: rgb(238, 2, 2) !important;
  font-size: 1.4em !important;
}

/* Footer area styling */
footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  display: flex;
  justify-content: center;
}

footer a {
  margin: 2rem;
}

footer p {
  color: #fff;
}

footer p:hover {
  color: rgb(238, 2, 2);
}

/* smaller screens @ max 900px media queries */

@media screen and (max-width: 900px) {

  header {
    padding: 1rem;
    line-height: 1.4;
  }

  .game-wrapper {
    width: 100%;
    height: 40vh;
  }

  .card-game-area {
    top: 20vh;
    width: 80%;
    height: auto;
  }

  .message-area {
    height: 15px;
  }

  .card-game-area #message {
    font-size: 1.5rem;
  }

  #player-cards {
    height: 100px;
    margin-top: 10px;
  }

  #computer-cards {
    height: 100px;
    margin-top: 10px;
  }

  .left-box {
    width: 50%;
    display: flex;
  }

  .right-box {
    width: 100%;
    display: flex;
    justify-content: space-between;
  }

  .right-box button {
    margin-left: 0;
  }

  .left-box button {
    margin-left: 0;
  }

  .game-buttons {
    display: flex;
    bottom: -15%;
    right: 0;
  }

  .admin-buttons {
    margin: 2em;
  }

  .overlay-text.visible {
    display: flex;
    animation: overlay-grow 500ms forwards;
    text-align: center;
  }

  @keyframes overlay-grow {
    from {
      background-color: rgba(0, 0, 0, 0);
      font-size: 0;
    }

    to {
      background-color: rgba(0, 0, 0, .8);
      font-size: 5em;
    }
  }

}

/* smaller screens @ max 500px media queries */

@media screen and (max-width: 500px) {
  button {
    font-size: 1.2rem;
    padding: 1rem 1.5rem;
  }
}

